# Parallel_SPMM

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cuda.sub  matrices.txt  test.c
.cmake/api/v1/reply/: cache-v2-f74e0a8396f1be63db15.json  cmakeFiles-v1-bc9e9d55fe0c18031efc.json  codemodel-v2-a743b29ae61e4bad72a6.json  index-2023-03-01T13-59-01-0776.json  target-omp_spmm-Debug-99db03bb0497af9c424f.json
cuda/: CMakeLists.txt  cu_csr.cu  cu_ell.cu  cu_hell.cu  cu_hll.cu  cu_spmm.cu  cu_test.c  cu_utils.c  cu_utils.cu  cu_utils.cuh  cu_utils.h  cuda.sub  cuda_test.c
cuda/headers/: cu_csr.cuh  cu_ell.cuh  cu_hll.cuh  cu_utils.cuh
lib/: CMakeLists.txt  mmio.h
openmp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  omp_csr.c  omp_ell.c  omp_spmm  omp_spmm.c  omp_spmv.c  omp_test.c  omp_utils.c  omp_utils.h  ompi_spmm  ompi_spmm.c
openmp/headers/: omp_csr.h  omp_ell.h  omp_utils.h
parallel/: CMakeLists.txt
parallel/cuda/: CMakeLists.txt
parallel/openmp/: CMakeLists.txt  openmp_mmp.c
resources/: mat.txt  matrices.txt
serial/: CMakeLists.txt  s_spmm.c  serial_mmp.c  spmv.c
utils/: CMakeLists.txt  error.c  io.c  serial.c  storage.c  test.c  utils.c  utils.h
utils/headers/: test.h  utils.h
